////
= TinkerPop3 CHANGELOG

== TinkerPop 3.7.0 (Gremfir Master of the Pan Flute)

image::https://raw.githubusercontent.com/apache/tinkerpop/master/docs/static/images/gremlin-zamfir.png[width=185]

[[release-3-7-6]]
=== TinkerPop 3.7.6 (NOT OFFICIALLY RELEASED YET)

* Integrated Python driver examples into automated build process to ensure examples remain functional.
* Added `closeSessionPostGraphOp` to the Gremlin Server settings to indicate that the `Session` should be closed on either a successful commit or rollback.

[[release-3-7-5]]
=== TinkerPop 3.7.5 (Release Date: November 12, 2025)

* Improved Java driver host availability on connection pool initialization.
* Added getter for `parameterItems` and `valueTraversal` on `DifferenceStep`.
* Added properties to `Element` objects found in a `Path` for GraphSON v2 and v3 and GraphBinary.
* Fixed edge properties for GraphBinary which were not deserializing properly.
* Deprecated `has(key, traversal)` and `has(T, traversal)` options for `has()` step.
* Improved GLV examples reliability and documentation with step-by-step instructions.
* Added root-level GLV examples in `gremlin-examples/` directory that use published driver versions for easy out-of-the-box usage, separate from module-level examples that use local development code.
* Bump netty to 4.1.125.Final
* Fixed `empty-sample-secure.groovy` to work with `Compilation.COMPILE_STATIC`

==== Bugs

* TINKERPOP-3181 Allow Client initialization to succeed even if minPoolSize is not met
* TINKERPOP-3182 Consistent serialization of Path for untyped GraphSON

[[release-3-7-4]]
=== TinkerPop 3.7.4 (Release Date: August 1, 2025)

* Fixed bug in server `Settings` where it was referencing a property that was back in 3.3.0 and generating a warning log.
* Improved performance of `Traversal.lock()` which was being called excessively.
* Added log entry in `WsAndHttpChannelizerHandler` to catch general errors that escape the handlers.