@@ -472,6 +472,7 @@ world.gremlins = {
     'g_withStrategiesXSubgraphStrategyXsubgraphDXX_EX12X_bothV': [(lambda g, eid12=None:g.with_strategies(*[TraversalStrategy('SubgraphStrategy',{'checkAdjacentVertices':False,'vertices':__.has('name',P.within(['josh','lop','ripple'])),'edges':__.or_(__.has('weight',float(0.4)).has_label('created'),__.has('weight',float(1.0)).has_label('created'))}, 'org.apache.tinkerpop.gremlin.process.traversal.strategy.decoration.SubgraphStrategy')]).E(eid12).both_v())], 
     'g_withStrategiesXSubgraphStrategyXsubgraphDXX_EX9X_bothV': [(lambda g, eid9=None:g.with_strategies(*[TraversalStrategy('SubgraphStrategy',{'checkAdjacentVertices':False,'vertices':__.has('name',P.within(['josh','lop','ripple'])),'edges':__.or_(__.has('weight',float(0.4)).has_label('created'),__.has('weight',float(1.0)).has_label('created'))}, 'org.apache.tinkerpop.gremlin.process.traversal.strategy.decoration.SubgraphStrategy')]).E(eid9).both_v())], 
     'g_withStrategiesXSubgraphStrategyXcheckAdjacentVertices_subgraphDXX_EX9X_bothV': [(lambda g, eid9=None:g.with_strategies(*[TraversalStrategy('SubgraphStrategy',{'checkAdjacentVertices':True,'vertices':__.has('name',P.within(['josh','lop','ripple'])),'edges':__.or_(__.has('weight',float(0.4)).has_label('created'),__.has('weight',float(1.0)).has_label('created'))}, 'org.apache.tinkerpop.gremlin.process.traversal.strategy.decoration.SubgraphStrategy')]).E(eid9).both_v())], 
+    'g_withStrategiesXSubgraphStrategyXuseMapStepsInFilterX_E': [(lambda g:g.with_strategies(*[TraversalStrategy('SubgraphStrategy',{'checkAdjacentVertices':True,'vertices':__.name.is_(P.within(['lop','josh'])),'edges':__.label().is_(P.eq('created'))}, 'org.apache.tinkerpop.gremlin.process.traversal.strategy.decoration.SubgraphStrategy')]).E())], 
     'g_VX1X_asXaX_outXcreatedX_addEXcreatedByX_toXaX': [(lambda g, vid1=None:g.add_v('person').property('name','marko').property('age',29).as_('marko').add_v('person').property('name','vadas').property('age',27).as_('vadas').add_v('software').property('name','lop').property('lang','java').as_('lop').add_v('person').property('name','josh').property('age',32).as_('josh').add_v('software').property('name','ripple').property('lang','java').as_('ripple').add_v('person').property('name','peter').property('age',35).as_('peter').add_e('knows').from_('marko').to('vadas').property('weight',float(0.5)).add_e('knows').from_('marko').to('josh').property('weight',float(1.0)).add_e('created').from_('marko').to('lop').property('weight',float(0.4)).add_e('created').from_('josh').to('ripple').property('weight',float(1.0)).add_e('created').from_('josh').to('lop').property('weight',float(0.4)).add_e('created').from_('peter').to('lop').property('weight',float(0.2))), (lambda g, vid1=None:g.V(vid1).as_('a').out('created').add_e('createdBy').to('a')), (lambda g, vid1=None:g.E()), (lambda g, vid1=None:g.V(vid1).in_e())], 
     'g_VX1X_asXaX_outXcreatedX_addEXcreatedByX_toXaX_propertyXweight_2X': [(lambda g, vid1=None:g.add_v('person').property('name','marko').property('age',29).as_('marko').add_v('person').property('name','vadas').property('age',27).as_('vadas').add_v('software').property('name','lop').property('lang','java').as_('lop').add_v('person').property('name','josh').property('age',32).as_('josh').add_v('software').property('name','ripple').property('lang','java').as_('ripple').add_v('person').property('name','peter').property('age',35).as_('peter').add_e('knows').from_('marko').to('vadas').property('weight',float(0.5)).add_e('knows').from_('marko').to('josh').property('weight',float(1.0)).add_e('created').from_('marko').to('lop').property('weight',float(0.4)).add_e('created').from_('josh').to('ripple').property('weight',float(1.0)).add_e('created').from_('josh').to('lop').property('weight',float(0.4)).add_e('created').from_('peter').to('lop').property('weight',float(0.2))), (lambda g, vid1=None:g.V(vid1).as_('a').out('created').add_e('createdBy').to('a').property('weight',float(2.0))), (lambda g, vid1=None:g.E()), (lambda g, vid1=None:g.V(vid1).both_e()), (lambda g, vid1=None:g.V(vid1).in_e().has('weight',float(2.0)))], 
     'g_V_outE_propertyXweight_nullX': [(lambda g:g.add_v('person').property('name','marko').property('age',29).as_('marko').add_v('person').property('name','vadas').property('age',27).as_('vadas').add_v('software').property('name','lop').property('lang','java').as_('lop').add_v('person').property('name','josh').property('age',32).as_('josh').add_v('software').property('name','ripple').property('lang','java').as_('ripple').add_v('person').property('name','peter').property('age',35).as_('peter').add_e('knows').from_('marko').to('vadas').property('weight',float(0.5)).add_e('knows').from_('marko').to('josh').property('weight',float(1.0)).add_e('created').from_('marko').to('lop').property('weight',float(0.4)).add_e('created').from_('josh').to('ripple').property('weight',float(1.0)).add_e('created').from_('josh').to('lop').property('weight',float(0.4)).add_e('created').from_('peter').to('lop').property('weight',float(0.2))), (lambda g:g.V().out_e().property('weight',None)), (lambda g:g.E().properties('weight'))], 
